2007-08-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/filter/gstlpwsinc.c: (gst_lpwsinc_dispose),
	(gst_lpwsinc_class_init), (gst_lpwsinc_init), (process_32),
	(process_64), (lpwsinc_build_kernel), (lpwsinc_setup),
	(lpwsinc_get_unit_size), (lpwsinc_transform),
	(lpwsinc_set_property), (lpwsinc_get_property):
	* gst/filter/gstlpwsinc.h:
	Add double support, replace "this" with "self" as the former
	is a C++ keyword.
	Implement the frequency property in Hz instead of fraction
	of sampling frequency.
	Remove some unecessary FIXMEs and add some TODOs, add some
	required locking and refactor the kernel generation into a
	separate function that is also called when the properties
	change now.
	And use BaseTransform::transform instead of transform_ip
	as the convolution is done out of place anyway. Should
	be done in place later.

2007-08-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* gst/stereo/Makefile.am:
	* gst/stereo/gststereo.c: (gst_stereo_base_init),
	(gst_stereo_class_init), (gst_stereo_init),
	(gst_stereo_transform_ip), (gst_stereo_set_property),
	(gst_stereo_get_property):
	* gst/stereo/gststereo.h:
	Port the stereo element to GStreamer 0.10.

2007-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	submitted by: Raphael Higino <phhigino@gmail.com>

	* po/LINGUAS:
	* po/pt_BR.po:
	  Added Portuguese (Brazilian) translation.

2007-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/uk.po:
	* po/vi.po:
	  Updated translations.

2007-08-08  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/filter/Makefile.am:
	* gst/filter/gstbpwsinc.c: (gst_bpwsinc_dispose),
	(gst_bpwsinc_base_init), (gst_bpwsinc_class_init),
	(gst_bpwsinc_init), (bpwsinc_setup):
	* gst/filter/gstbpwsinc.h:
	* gst/filter/gstlpwsinc.c: (gst_lpwsinc_dispose),
	(gst_lpwsinc_base_init), (gst_lpwsinc_class_init),
	(gst_lpwsinc_init), (lpwsinc_setup):
	* gst/filter/gstlpwsinc.h:
	Use GstAudioFilter as base class and don't leak the memory