@@ -1,5 +1,15 @@
 2007-08-09  Sebastian Dröge  <slomo@circular-chaos.org>
 
+	* gst/filter/gstbpwsinc.c: (gst_bpwsinc_dispose),
+	(gst_bpwsinc_init), (bpwsinc_setup), (bpwsinc_transform_ip),
+	(bpwsinc_set_property), (bpwsinc_get_property):
+	"this" is a C++ keyword, use "self" instead.
+	Add TODOs and FIXMEs and remove two wrong FIXMEs.
+	* gst/filter/gstlpwsinc.c:
+	Add FIXMEs and a new TODO.
+
+2007-08-09  Sebastian Dröge  <slomo@circular-chaos.org>
+
 	* gst/filter/gstlpwsinc.c: (gst_lpwsinc_dispose),
 	(gst_lpwsinc_class_init), (gst_lpwsinc_init), (process_32),
 	(process_64), (lpwsinc_build_kernel), (lpwsinc_setup),
